...
  },
  {
    nome: 'Culto de Domingo',
    dataInicio: new Date(2025, 8, 10),
    dataTermino: new Date(2025, 8, 10),
    horaInicio: '18:00',
    horaTermino: '20:00',
  },
  {
    nome: 'Culto de Jovens Ruah',
    dataInicio: new Date(2025, 8, 9),
    dataTermino: new Date(2025, 8, 9),
    horaInicio: '19:30',
...
